--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 node_modules
 .project
-public/*.js
-public/*.css
-public/*.json
+# public/*.js
+# public/*.css
+# public/*.json
 chosen*.zip
 .sass-cache
 .ruby-version
